Fixes #19. Updates SmoothScroll JS so it does not break the site from the latest WP 5.5 update.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description: Lead your online class with style, organization and the most user-f
 Author: The brandiD
 Author URI: https://thebrandid.com/
 
-Version: 2.0.5
+Version: 2.0.6
 
 Tags: block-styles, classes, courses, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, left-sidebar, lifter-lms, membership, one-column, right-sidebar, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, two-columns, wide-blocks
 
@@ -3288,13 +3288,11 @@ img.circle {
     position: relative;
   }
   .js.home.fixed-header-on .custom-header-background .site-header{
-    position: -webkit-sticky;
     position: sticky;
     background-color: transparent;
   }
   .home.fixed-header-on .site-header{
     background-color: transparent;
-    position: -webkit-sticky;
     position: sticky;
   }
   .site-header > .wrap{
